# Etna

./: .gitignore  Build.sh  CMakeLists.txt  CodeCoverage.sh  Dockerfile  Makefile  README.md  build.sh  checksums.txt  debug.map  download-lauch-agent.sh  flash.ld  flash_code  hi.sh  openocd.err  toolchain_etna.cmake
.circleci/: config.yml
.github/workflows/: etnaWorkflow.yml
bootloader/: Startup.cpp
cmakeModules/: CodeCoverage.cmake  CompileEtna.cmake  EtnaFiles.cmake  EtnaTestFiles.cmake  EtnaToolchain.cmake  StaticCodeAnalysis.cmake  UnitTest.cmake
header/: registers.h
header/src/: registers.cpp
scripts/: Build.sh  CodeCoverage.sh  FlashCode.sh  StaticCodeAnalysis.sh  UnitTests.sh
source/: CMakeLists.txt
source/abstract/: HardwareRegisters.h  RccClocks.h  Registers.h
source/abstract/HAL/: LED.h  PeripheralBusses.h
source/abstract/registers/: Addresses.h
source/concrete/: Ahb1Clocks.h  Ahb1Peripheral.h  Apb1Peripheral.h  GpioAF.h  GpioMode.h  MCURegisters.h  PeripheralClocks.h  Peripherals.h  RingBuffer.h  System.h  SystemGpios.h  SystemPeripherals.h  Uart2DmaController.h  UsartCR1.h  UsartCR2.h
source/concrete/HAL/: BoardBus.h  BoardBusses.h  GreenUserLED.h
source/concrete/gpio/: GpioMode.h
source/concrete/registers/: MCURegisters.h  RegisterAddresses.h
source/concrete/system/: SystemGpios.h  SystemLogger.h
source/concrete/usart/: Usart.h  UsartCR1.h  UsartCR2.h
source/src/: Ahb1Clocks.cpp  Ahb1Peripheral.cpp  Apb1Peripheral.cpp  GpioAF.cpp  GpioMode.cpp  MCURegisters.cpp  Main.cpp  PeripheralClocks.cpp  Peripherals.cpp  System.cpp  SystemGpios.cpp  SystemPeripherals.cpp  Uart2DmaController.cpp  UsartCR1.cpp  UsartCR2.cpp
source/src/HAL/: BoardBus.cpp  BoardBusses.cpp  GreenUserLED.cpp
source/src/etna/: Main.cpp
source/src/gpio/: GpioAF.cpp  GpioMode.cpp
source/src/peripheral/: Ahb1Peripheral.cpp  Apb1Peripheral.cpp
source/src/registers/: MCURegisters.cpp
source/src/system/: SystemGpios.cpp  SystemLogger.cpp  SystemPeripherals.cpp
source/src/usart/: Usart.cpp  UsartCR1.cpp  UsartCR2.cpp
src/: main.cpp  startup.s
startup/: Flash.ld  Startup.cpp
test/: .gitignore  CMakeLists.txt  EtnaTests  EtnaUnitTests  MainTest.cpp  Makefile
test/mocks/: Ahb1ClocksMock.cpp  Ahb1ClocksMock.h  GpioRegistersMock.h  GreenUserLEDAddressesMock.h  PeripheralClocksMock.h  PeripheralsMock.cpp  PeripheralsMock.h  SystemGpiosMock.cpp  SystemGpiosMock.h  SystemLoggerMock.cpp  SystemLoggerMock.h  SystemMock.cpp  SystemMock.h  SystemPeripheralsMock.cpp  SystemPeripheralsMock.h
test/objs/home/odin/workspace/c++_projects/embedded/etna/source/src/HAL/: GreenUserLED.d  GreenUserLED.gcda  GreenUserLED.gcno
test/objs/home/odin/workspace/c++_projects/embedded/etna/test/: MainTest.d  MainTest.gcda  MainTest.gcno
test/objs/home/odin/workspace/c++_projects/embedded/etna/test/tests/: LEDComponentTest.d  LEDComponentTest.gcda  LEDComponentTest.gcno
test/src_test/: registers_test.cpp
test/tests/: Ahb1ClocksTest.cpp  Ahb1PeripheralTest.cpp  AlgorithmsTest.cpp  DMAControllerTest.cpp  GpioModeTest.cpp  GpioTest.cpp  HAL-PeripheralBussesTest.cpp  LEDComponentTest.cpp  MCURegisterTest.cpp  PeripheralClocksTest.cpp  PeripheralsTest.cpp  RegisterAccessTest.cpp  SystemTest.cpp  UsartCommunicationTest.cpp
test/tests/registers/: registers.cpp  registers.h  registers_test.cpp  static_registers.cpp  static_registers.h
