cmake_minimum_required(VERSION 3.22)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
project(Etna VERSION 0.0.1 LANGUAGES CXX)

set (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmakeModules)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BUILD_ETNA CACHE BOOL OFF)
if(BUILD_ETNA)
    enable_testing()
    add_subdirectory(source)
endif()

set(BUILD_TEST CACHE BOOL OFF)
if(BUILD_TEST)
    enable_testing()
    add_subdirectory(test)
endif()
